Bug 24315 - [855GM] Rendering corruption in text (usually)
Summary: [855GM] Rendering corruption in text (usually)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-05 02:44 UTC by Rémi Cardona
Modified: 2009-12-07 04:04 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot of the desktop (133.57 KB, image/png)
2009-10-05 02:44 UTC, Rémi Cardona
no flags Details
Possibly related corruption. (41.93 KB, image/png)
2009-10-13 03:19 UTC, Chris Wilson
no flags Details
Report of similar artefacts on an i945 (186.63 KB, image/png)
2009-10-13 03:21 UTC, Chris Wilson
no flags Details

Description Rémi Cardona 2009-10-05 02:44:45 UTC
Created attachment 30065 [details]
screenshot of the desktop

Can't tell if it's a regression because of other bugs, so this one might have been here for a long time and it's hard to trigger it.

Here's what I have so far :

 - the corruption almost always appear in text
 - I've seen slight corruption in firefox's favicons once or twice
 - forcing a redisplay of the window makes the corruption go away

xf86-video-intel: 94fc93d4e2b88565dca17f72903d8991213c9ee8
libdrm: 2.4.14
xorg-server: 1.6.4.901
kernel: 2.6.31-rc9-00143-g8542a0b (drm-intel-next a few days before .32)

Thanks
Comment 1 Rémi Cardona 2009-10-05 02:46:20 UTC
Oh and I forgot, sometimes the corruption will be a pattern, sort of like a colored staircase...

I'll try to take a snapshot next time it happens.

Thanks
Comment 2 Chris Wilson 2009-10-13 03:19:30 UTC
Created attachment 30338 [details]
Possibly related corruption.
Comment 3 Chris Wilson 2009-10-13 03:21:53 UTC
Created attachment 30339 [details]
Report of similar artefacts on an i945
Comment 4 Rémi Cardona 2009-10-13 11:20:12 UTC
Confirming, I've seen both types of corruptions.

Thanks
Comment 5 Chris Wilson 2009-10-22 14:17:45 UTC
21:59 < Maxi> ickle, remi`: I haven't seen any font corruption since activating DebugFlushCaches.
Comment 6 Chris Wilson 2009-11-29 17:06:01 UTC
Hopefully this commit flushes the caches correctly:

commit 9a2c18fb92659d57741bfdcacbe4f69aab361532
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Nov 29 21:07:45 2009 +0000

    batch: Emit a 'pipelined' flush when using a dirty source.
    
    Ensure that the render caches and texture caches are appropriately
    flushed when switching a pixmap from a target to a source.
    
    This should fix bug 24315,
      [855GM] Rendering corruption in text (usually)
      https://bugs.freedesktop.org/show_bug.cgi?id=24315
Comment 7 Chris Wilson 2009-12-02 09:24:21 UTC
Ok, found another silly little bug that could be related. Apparently we were not resubmitting batches when interrupted by a signal:

libdrm:
commit b73612e4fd69565aa2c5c2e9677f3e0af1945f7d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Dec 2 12:58:00 2009 +0000

    intel: Repeat execbuffer after EINTR
    
    EAGAIN cannot be raised by the current code, but the system call maybe
    interrupted and so return EINTR.


So... How close are we to finally resolving this? :)
Comment 8 Chris Wilson 2009-12-07 04:04:28 UTC
I think this bug should be fixed now. (I have a small glimmer of doubt about the validity of not having to flush with the 2D use of the render cache...)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.