src/i915_render.c
@@ -459,6 +459,11 @@ i915_prepare_composite(int op, PicturePtr source_picture,
 	}
 
 	intel->i915_render_state.op = op;
+
+	if(i830_uxa_pixmap_is_dirty(source) ||
+	   (mask && i830_uxa_pixmap_is_dirty(mask)))
+		intel_batch_pipelined_flush(scrn);
+
 	intel->needs_render_state_emit = TRUE;
 
 	return TRUE;
